fix title font size on mobile

--- a/less/css/timeline.less
+++ b/less/css/timeline.less
@@ -405,6 +405,12 @@ timeline.css
             padding: 0 0 3px 0;
         }
         .item {
+            .title {
+                font-size: 16px;
+            }
+            .subtitle {
+                font-size: 15px;                
+            }
             float: left !important;
             margin: 15px 0 0 0 !important;
             padding-right: 10px;
